Added auto window renumbering

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,9 @@ set -g default-terminal "screen-256color"
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
 
+# Auto renumber when windows are closed
+set-option -g renumber-windows on
+
 # Cycle panes with C-b C-b
 unbind ^B
 bind ^B select-pane -t :.+
