--- a/tmux.conf
+++ b/tmux.conf
@@ -25,7 +25,7 @@ set -g mouse on
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 # Use the system clipboard
-set-option -g default-command "reattach-to-user-namespace -l bash"
+# set-option -g default-command "reattach-to-user-namespace -l bash"
 
 # Clear the pane and it's history
 bind -n C-k send-keys C-l \; clear-history
