--- a/tmux.conf
+++ b/tmux.conf
@@ -50,3 +50,9 @@ bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 # Update default binding of `Enter` to also use copy-pipe
 unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Pane resizing (control-b-[j|k|l|h])
+bind j resize-pane -D 10
+bind k resize-pane -U 10
+bind l resize-pane -L 10
+bind h resize-pane -R 10
