--- a/tmux.conf
+++ b/tmux.conf
@@ -54,5 +54,5 @@ bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 # Pane resizing (control-b-[j|k|l|h])
 bind j resize-pane -D 10
 bind k resize-pane -U 10
-bind l resize-pane -L 10
-bind h resize-pane -R 10
+# bind l resize-pane -L 10
+# bind h resize-pane -R 10
