--- a/tmux.conf
+++ b/tmux.conf
@@ -56,3 +56,9 @@ bind j resize-pane -D 10
 bind k resize-pane -U 10
 # bind l resize-pane -L 10
 # bind h resize-pane -R 10
+
+set -g @resurrect-strategy-vim 'session'
+set -g @continuum-restore 'on'
+
+run-shell ~/dotfiles/tmux-resurrect/resurrect.tmux
+run-shell ~/dotfiles/tmux-continuum/continuum.tmux
