Add kubectl context info to tmux panel

--- a/tmux.conf
+++ b/tmux.conf
@@ -62,3 +62,5 @@ set -g @continuum-restore 'on'
 
 run-shell ~/dotfiles/tmux-resurrect/resurrect.tmux
 run-shell ~/dotfiles/tmux-continuum/continuum.tmux
+
+set -g status-right "#(/bin/bash $HOME/dotfiles/kube.tmux 250 black black)"
