Add username + hostname to tmux status line

--- a/tmux.conf
+++ b/tmux.conf
@@ -63,7 +63,8 @@ set -g @continuum-restore 'on'
 run-shell ~/dotfiles/tmux-resurrect/resurrect.tmux
 run-shell ~/dotfiles/tmux-continuum/continuum.tmux
 
-set -g status-right "#(/bin/bash $HOME/dotfiles/kube.tmux 250 black black)"
+set -g status-right "#(whoami)@#(hostname) | #(/bin/bash $HOME/dotfiles/kube.tmux 250 black black)"
+
 
 # https://github.com/roxma/vim-tmux-clipboard
 # https://www.reddit.com/r/vim/comments/7tt4ts/painless_copy_paste_between_tmux_vim_and_system/dtgwdbk/
