--- a/tmux.conf
+++ b/tmux.conf
@@ -69,3 +69,5 @@ set -g status-right "#(whoami)@#(hostname) | #(/bin/bash $HOME/dotfiles/kube.tmu
 # https://github.com/roxma/vim-tmux-clipboard
 # https://www.reddit.com/r/vim/comments/7tt4ts/painless_copy_paste_between_tmux_vim_and_system/dtgwdbk/
 set -g focus-events on
+
+set -sg escape-time 0
